test/1.2/errors/T_ESYNTAX_subdevice.dml
/*
  © 2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/

dml 1.2;

device test;

// 1.4+ only
/// ERROR ESYNTAX
subdevice d;
